[package]
name = "keycheck"
description = "Check your repository for Ethereum private keys"
version = "0.1.0"
edition = "2021"
authors = ["atris <atriscrypto@protonmail.com"]
license = "MIT"
homepage = "https://github.com/vacekj/keycheck"
repository = "https://github.com/vacekj/keycheck"

[dependencies]
ignore = "0.4.20"
regex = "1.5.4"
tempfile = "3.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
rayon = "1.7.0"
git2 = "0.17.2"
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.1"
ethers = "2.0.3"



